--- a/application.yml
+++ b/application.yml
@@ -27,7 +27,9 @@ spring:
     cache: false
     mode: "HTML"
     check-template-location: true
-
+  jackson:
+    serialization:
+      fail-on-empty-beans: false
 
 server:
   port: 8080
