todo: 인포윈도우는 하나밖에 안열려서 오버레이방식으로 변경해야함.

--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 
     // == 스프링 부트 3.0 이상 ==
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    implementation 'org.json:json:20220924'
     annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
 
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
