--- a/application.yml
+++ b/application.yml
@@ -44,6 +44,41 @@ spring:
   jackson:
     serialization:
       fail-on-empty-beans: false
+  security:
+    oauth2:
+      client:
+        registration:
+          kakao:
+            client-id: c9c99f2b755d05ff320b48f64b530849
+            client-secret: 10b4089090b3c8756eb564cabf6e1c81
+            redirect-uri: http://localhost:8080/login/oauth2/code/kakao
+            authorization-grant-type: authorization_code
+            scope:
+              - account_email
+              - profile_nickname
+            client-name: kakao
+            client-authentication-method: POST
+          naver:
+            client-id: sAcKuXt60ESOGETn6xtp
+            client-secret: QK7mKWNgUF
+            redirect-uri: http://localhost:8080/login/oauth2/code/naver
+            authorization-grant-type: authorization_code
+            scope: nickname,email,name
+            client-name: Naver
+
+        provider:
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
+          naver:
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response
+
+
 
 server:
   port: 8080
