--- a/application.yml
+++ b/application.yml
@@ -51,7 +51,7 @@ spring:
           kakao:
             client-id: c9c99f2b755d05ff320b48f64b530849
             client-secret: 10b4089090b3c8756eb564cabf6e1c81
-            redirect-uri: http://localhost:8080/login/oauth2/code/kakao
+            redirect-uri: http://shift3.kr/login/oauth2/code/kakao
             authorization-grant-type: authorization_code
             scope:
               - account_email
@@ -61,10 +61,18 @@ spring:
           naver:
             client-id: sAcKuXt60ESOGETn6xtp
             client-secret: QK7mKWNgUF
-            redirect-uri: http://localhost:8080/login/oauth2/code/naver
+            redirect-uri: http://shift3.kr/login/oauth2/code/naver
             authorization-grant-type: authorization_code
             scope: nickname,email,name
             client-name: Naver
+          facebook:
+            client-id: 1255723775019147
+            client-secret: 5eb9a9593cd1515126638fc2562a6098
+            redirect-uri: http://shift3.kr/login/oauth2/code/facebook
+            authorization-grant-type: authorization_code
+            scope: email
+            client-name: Facebook
+
 
         provider:
           kakao:
@@ -77,6 +85,12 @@ spring:
             token-uri: https://nid.naver.com/oauth2.0/token
             user-info-uri: https://openapi.naver.com/v1/nid/me
             user-name-attribute: response
+          facebook:
+            authorization-uri: https://www.facebook.com/v3.3/dialog/oauth
+            token-uri: https://graph.facebook.com/v3.3/oauth/access_token
+            user-info-uri: https://graph.facebook.com/me?fields=id,name,email
+            user-name-attribute: id
+            client-authentication-method: post
 
 
 
